# zap1

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  E2E_PROOF_20260327.md  EVALUATOR_QUICKSTART.md  FROST_DESIGN.md  FROST_THREAT_MODEL.md  ONCHAIN_PROTOCOL.md  OPERATOR_GUIDE.md  QUICKSTART.md  README.md  SECURITY.md  STRUCTURAL_BUILDOUT.md  TEST_VECTORS.md  WYOMING_DAO_COMPLIANCE.md  ZAINO_INTEGRATION.md  ZAINO_INTEGRATION_GUIDE.md  ZAINO_VALIDATION.md  ZSA_ATTESTATION.md  docker-compose.mainnet.yml  verify_proof.py
.github/: CODEOWNERS
.github/workflows/: anchor-liveness.yml  ci.yml  consistency.yml
conformance/: CHANGELOG.md  VERSIONING.md  api_schemas.json  check_api.py  hash_vectors.json
conformance/contracts/: explorer.md  indexer.md  operator.md  wallet.md
contrib/: zodl-crossPay-attestation.ts  zodl-integration-guide.md
contrib/zodl-conformance/: README.md  run-kotlin.kts  run-node.cjs  run-swift.swift  test-vectors.json
docs/: CREDENTIAL_SPEC.md  EVENT_SCHEMA.md  FROST_SIGNING_PROTOCOL.rs  HEALTH_SCHEMA.md  OPERATOR_RUNBOOK.md  PROOF_BUNDLE_V2.md
examples/: VERIFY_DEMO.md  compatibility_vectors.json  conformance_check.py  demo_audit_package.json  governance_demo.sh  live_ownership_attest_proof.json  proof_bundle_example.json  schema_witness.json  validate_instance.sh  verify_onchain.py  zaino_adapter_output.txt  zaino_adapter_reference.md
nsm1-verify/: Cargo.toml
nsm1-verify/src/: lib.rs
scripts/: check.sh  check_anchor_liveness.py  check_compatibility.py  evaluate.sh  operator-setup.sh
src/: anchor.rs  api.rs  config.rs  db.rs  foreman.rs  frost_signer.rs  keys.rs  lib.rs  main.rs  memo.rs  memo_decode.rs  miner_page.html  models.rs  node.rs  notify.rs  payment_page.html  scanner.rs  verify_page.html  wallet.rs  webhook.rs  zip302.rs
tests/: api_integration_test.rs  memo_merkle_test.rs
verify-widget/: ProofVerifier.jsx  README.md  blake2b.js  package.json  verify-standalone.html
zap1-verify/src/: lib.rs
