[package]
name = "zap1"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.1"
authors = ["zk_nd3r <zk_nd3r@frontiercompute.io>"]
description = "ZAP1 structured memo protocol for Zcash. Reference implementation."
license = "MIT"
repository = "https://github.com/Frontier-Compute/zap1"

[[bin]]
name = "anchor_root"
path = "src/bin/anchor_root.rs"

[[bin]]
name = "zaino_adapter"
path = "src/bin/zaino_adapter.rs"

[[bin]]
name = "zap1_schema"
path = "src/bin/zap1_schema.rs"

[dependencies]
# Zcash
zcash_client_backend = { version = "0.21", default-features = false, features = ["orchard"] }
zcash_keys = { version = "0.12", default-features = false, features = ["orchard"] }
zcash_protocol = { version = "0.7", default-features = false }
zcash_primitives = { version = "0.26", default-features = false }
orchard = "0.12"
zip32 = "0.2"

# Web
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "process", "net"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
blake2b_simd = "1"

# HTTP client (for Zebra RPC)
reqwest = { version = "0.12", features = ["json"] }

# gRPC client (for Zaino backend)
tonic = "0.12"
prost = "0.13"
async-trait = "0.1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-stream = "0.1"

# ZAP1 verification SDK (vendored)
zap1-verify = { path = "zap1-verify" }

[build-dependencies]
tonic-build = "0.12"

[patch.crates-io]
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "1f736379a4099ef1ba3b3bff4035c725e28a018a" }
zcash_address = { git = "https://github.com/zcash/librustzcash", rev = "1f736379a4099ef1ba3b3bff4035c725e28a018a" }
zcash_encoding = { git = "https://github.com/zcash/librustzcash", rev = "1f736379a4099ef1ba3b3bff4035c725e28a018a" }
zcash_history = { git = "https://github.com/zcash/librustzcash", rev = "1f736379a4099ef1ba3b3bff4035c725e28a018a" }
zcash_keys = { git = "https://github.com/zcash/librustzcash", rev = "1f736379a4099ef1ba3b3bff4035c725e28a018a" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash", rev = "1f736379a4099ef1ba3b3bff4035c725e28a018a" }
zcash_transparent = { git = "https://github.com/zcash/librustzcash", rev = "1f736379a4099ef1ba3b3bff4035c725e28a018a" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "1f736379a4099ef1ba3b3bff4035c725e28a018a" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash", rev = "1f736379a4099ef1ba3b3bff4035c725e28a018a" }
